<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Freebox Stats</string>
	<string name="tab1_name">Débit</string>
	<string name="tab3_name">Temp.</string>
	<string name="tab4_name">xDSL</string>
	<string name="tab5_name">Cumul</string>
	<string name="tab6_name">Switch</string>
	<string name="switch1">Switch 1</string>
	<string name="switch2">Switch 2</string>
	<string name="switch3">Switch 3</string>
	<string name="switch4">Switch 4</string>
	<string name="rate">Débit</string>
	<string name="rate_down">Débit down</string>
	<string name="rate_up">Débit up</string>
	<string name="stack">Cumul</string>
	<string name="temp">Température (°C)</string>
	<string name="noise">Marge de bruit (dB)</string>
	<string name="connection_failed">Connection échouée</string>
	<string name="freebox_connection_fail">Erreur lors de la connexion avec la Freebox…</string>
	<string name="graphs_loading_fail">Erreur lors du chargement des graphiques…</string>
	<string name="ok">OK</string>
	<string name="cancel">Annuler</string>
	<string name="yes">Oui</string>
	<string name="no">Non</string>
	<string name="close">Fermer</string>
	<string name="send_dev">Envoyer au développeur</string>
	<string name="menu_accessOptions">Configuration</string>
	<string name="menu_dissociate">Dissocier</string>
	<string name="dissociate">Voulez-vous dissocier l\'application de cette Freebox ?</string>
	<string name="firstlaunch_autoriserfreebox">Autoriser l\'application</string>
	<string name="firstlaunch_aut_explanation">Lors de sa première utilisation, l\'application a besoin d\'être autorisée auprès de la Freebox.
		Un message s\'affichera sur l\'écran du boîtier server.</string>
	<string name="firstlaunch_enattente">En attente de l\'autorisation…</string>
	<string name="loading">Chargement…</string>
	<string name="settings_autorefresh">Rafraîchissement auto</string>
	<string name="settings_displayxdsltab">Afficher l\'onglet xDSL</string>
	<string name="settings_graphprecision">Précision des graphiques</string>
	<string name="freeboxsearchfailmessage">Impossible de trouver une Freebox sur votre réseau local… Veuillez vérifier votre connexion.</string>
	<string name="freeboxupdateneeded">Impossible de récupérer les graphiques : il apparaît que votre Freebox n\'est pas à jour.
		Veuillez la redémarrer afin de la mettre à jour. Sans cela, l\'application ne pourra pas accéder aux statistiques.</string>
	<string name="freeboxupdateneededtitle">Mise à jour nécessaire</string>
	<string name="settings_graphprecisiondetails">Permet d\'accélérer l\'affichage des graphiques en réduisant la précision des courbes</string>
	<string name="send_errors">Envoyer le rapport d\'erreurs</string>
	<string name="send_errors_explanation">La liste des erreurs va être envoyée au développeur. Merci d\'ajouter le plus détails possibles à propos de cette/ces erreur(s).</string>
	<string name="send">Envoyer</string>
	
	<string name="sessionopening_error"><![CDATA[Impossible de se connecter à la Freebox : <br />\n
								&#8226;  Votre Freebox n\'est pas à jour<br />\n
								&#8226;  Votre Freebox est indisponible<br />\n
								&#8226;  Votre téléphone a un problème de connexion<br />\n
								&#8226;  Le point d\'accès auquel vous êtes connecté bloque la connexion ]]></string>
								
	<string name="settings">Paramètres</string>
	<string name="freebox">Freebox</string>
	<string name="debug">Debug</string>
	<string name="outages">Coupures</string>
	<string name="donate">Don</string>
	<string name="outagestext">La précision d\'une coupure (dates, durée) dépend de son ancienneté. Seules les coupures d\'il y a moins d\'un mois sont affichées.</string>
	<string name="the">Le</string>
	<string name="since2">de</string>
	<string name="since">Du</string>
	<string name="to">au</string>
	<string name="at">à</string>
	<string name="goodnews">Bonne nouvelle :)</string>
	<string name="outages_nooutage">Aucune coupure entre le FROM et le TO</string>
	<string name="outages_error">Erreur lors du chargement des coupures</string>
	<string name="refresh">Actualiser</string>
	<string name="finished">Terminé</string>
	<string name="retry">Réessayer</string>
	<string name="outage_less_than_one_hour">Moins d\'une heure</string>
	<string name="outage_less_than_one_minute">Moins d\'une minute</string>
	<string name="outage_one_minute">Une minute</string>
	<string name="outage_minutes">XX minutes</string>
	<string name="donate_text">Développer une telle application demande beaucoup de temps et de dévotion. Si Freebox Stats vous est utile, pourriez-vous
		considérer un don ? Merci !</string>
	<string name="donate_amount">Veuillez sélectionner le montant du don. (33% de cette somme est prélevée par Google)</string>
	<string name="dialog_opensource">Le saviez-vous ? Freebox Stats est maintenant gratuite et open-source ! Si vous le voulez, vous pouvez faire un don
		ou contribuer au développement sur GitHub</string>
	<string name="contribute">Contribuer</string>
	<string name="freebox_access_address">Adresse d\'accès de votre Freebox</string>
	<string name="freebox_access_address_explanation">Cette adresse est utilisée par l\'application pour communiquer avec votre Freebox. Si elle est
		accessible en-dehors de votre réseau local, utilisez son adresse IP. Ceci peut être configuré dans l\'interface d\'administration
		de votre Freebox (Paramètres de la Freebox > Mode avancé > Configuration > Activer l\'authentification par mot de passe).</string>
	<string name="unknown">Inconnue</string>
	<string name="connected_devices">Périphériques connectés</string>
	<string name="no_connected_devices">Aucun périphérique connecté</string>
</resources>
