<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/root_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="20dp">
	
	<CheckBox
		android:id="@+id/settings_autorefresh"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings_autorefresh"
		android:layout_marginBottom="20dp" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:paddingLeft="10dp"
		android:text="@string/settings_graphprecision" />
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="15sp"
		android:paddingLeft="10dp"
		android:textColor="@color/textSecondary"
		android:text="@string/settings_graphprecisiondetails" />
	<Spinner
		android:id="@+id/settings_graphprecision"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<TextView
		android:id="@+id/settings_graphprecisiondisabled"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:textSize="13sp"
		android:paddingLeft="25dp"
		android:textColor="@color/textSecondary"
		android:text="@string/settings_graphprecisiondisabled" />
	
	<CheckBox
		android:id="@+id/settings_displayxdsltab"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings_displayxdsltab"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="20dp" />
	
</LinearLayout>