<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/___drawer_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimaryDark"
	android:orientation="vertical" >


	<LinearLayout
		android:id="@+id/___drawer_settings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Drawer_Row" >

		<ImageView
			style="@style/Drawer_Row_Icon"
			android:src="@drawable/action_settings" />

		<TextView
			style="@style/Drawer_Row_Text"
			android:text="@string/settings" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/___drawer_freebox"
		style="@style/Drawer_Row"
		android:visibility="gone" >

		<ImageView
			style="@style/Drawer_Row_Icon"
			android:src="@drawable/ic_action_storage" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="28dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:shadowColor="@color/colorPrimaryDarker"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:text="@string/freebox"
				android:textColor="@color/drawerFontColor"
				android:textSize="@dimen/drawer_font_size" />

			<TextView
				android:id="@+id/___drawer_freebox_uri"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dp"
				android:shadowColor="@color/colorPrimaryDarker"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="3"
				android:textColor="@color/drawerFontColor2"
				android:textSize="@dimen/drawer_font_size_small" />

		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/___drawer_debug"
		style="@style/Drawer_Row"
		android:visibility="gone" >

		<ImageView
			style="@style/Drawer_Row_Icon"
			android:src="@drawable/ic_action_error" />

		<TextView
			style="@style/Drawer_Row_Text"
			android:text="@string/debug" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/___drawer_outages"
		style="@style/Drawer_Row" >

		<ImageView
			style="@style/Drawer_Row_Icon"
			android:src="@drawable/ic_action_flash_on_dark" />

		<TextView
			style="@style/Drawer_Row_Text"
			android:text="@string/outages" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/___drawer_donate"
		style="@style/Drawer_Row" >

		<ImageView
			style="@style/Drawer_Row_Icon"
			android:src="@drawable/ic_action_favorite" />

		<TextView
			style="@style/Drawer_Row_Text"
			android:text="@string/donate" />
	</LinearLayout>
</LinearLayout>