<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/colorPrimaryDark"
	android:fitsSystemWindows="true">

	<android.support.v7.widget.Toolbar
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

	<android.support.v4.widget.DrawerLayout
		android:id="@+id/drawer_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/colorPrimary">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<android.support.design.widget.TabLayout
					android:id="@+id/tabs"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/colorPrimary"
					app:tabMode="fixed"
					app:tabIndicatorColor="@color/accentColor" />

				<android.support.v4.view.ViewPager
					android:id="@+id/pager"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:fitsSystemWindows="true"
					android:background="@color/backgroundColor" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/firstlaunch"
				android:visibility="gone"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true">

				<LinearLayout
					android:id="@+id/screen1"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:visibility="gone">

					<TextView
						android:id="@+id/firstlaunch_text1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="30sp"
						android:textColor="@color/fullscreenTextColor"
						android:text="@string/firstlaunch_autoriserfreebox" />

					<TextView
						android:id="@+id/firstlaunch_text2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="19sp"
						android:textColor="@color/fullscreenTextColor"
						android:text="@string/firstlaunch_aut_explanation"
						android:layout_marginTop="20dp"
						android:gravity="center"
						android:padding="20dp" />

					<Button
						android:id="@+id/firstlaunch_ok"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="40dp"
						android:text="@string/ok" />

				</LinearLayout>

				<LinearLayout
					android:id="@+id/screen2"
					android:gravity="center_vertical|center_horizontal"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:id="@+id/firstlaunch_text3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="30sp"
						android:textColor="@color/fullscreenTextColor"
						android:text="@string/firstlaunch_enattente"
						android:padding="20dp" />

					<ProgressBar
						android:id="@+id/progressbar"
						android:layout_marginTop="40dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_loading"
				android:visibility="gone"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/colorPrimary"
				android:gravity="center_vertical|center_horizontal"
				android:fitsSystemWindows="true">

				<TextView
					android:id="@+id/tv_loadingtxt"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="30sp"
					android:textColor="@color/fullscreenTextColor"
					android:text="@string/loading" />

				<ProgressBar
					android:id="@+id/loadingprogressbar"
					android:layout_marginTop="40dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:id="@+id/sessionfailmessage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:padding="20dp"
					android:textSize="20sp"
					android:textColor="@color/fullscreenTextColor2"
					android:visibility="gone" />

				<TextView
					android:id="@+id/freeboxsearchfailmessage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:padding="20dp"
					android:textSize="20sp"
					android:textColor="@color/fullscreenTextColor2"
					android:visibility="gone"
					android:text="@string/freeboxsearchfailmessage" />

				<TextView
					android:id="@+id/updatefreeboxmessage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:padding="20dp"
					android:textSize="20sp"
					android:textColor="@color/fullscreenTextColor2"
					android:visibility="gone"
					android:text="@string/freeboxupdateneeded" />

				<Button
					android:id="@+id/retrybutton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/retry"
					android:visibility="gone"
					android:layout_marginTop="20dp" />
			</LinearLayout>
		</RelativeLayout>
	</android.support.v4.widget.DrawerLayout>
</LinearLayout>
