<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/root_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:padding="15dp"
	android:paddingBottom="10dp" >
	
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_action_flash_on"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="5dp"
		android:layout_marginTop="5dp" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<TextView
			android:id="@+id/outage_duration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:textSize="28sp" />
		
		<LinearLayout
			android:id="@+id/outage_fromto_oneday"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/the"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_date_oneday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/since2"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_from_hour_oneday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/at"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_to_hour_oneday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/outage_fromto_severaldays"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/since"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_from_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/at"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_from_hour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/to"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_to_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/at"
				android:textColor="#BBBBBB"
				android:layout_marginRight="5dp" />
			
			<TextView
				android:id="@+id/outage_to_hour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:textSize="14sp"
				android:textColor="@color/colorPrimary"
				android:shadowColor="#555555"
				android:shadowDx="0"
				android:shadowDy="1"
				android:shadowRadius="2"
				android:layout_marginRight="5dp" />
			
		</LinearLayout>
	
	</LinearLayout>
	
</LinearLayout>
