<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/fragment_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/bottom_shadow">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/graphTitle1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView_switch1"
				style="@style/GraphTitle"
				android:layout_marginTop="15dp"
				android:text="@string/switch1"
				android:layout_centerVertical="true"/>

			<ImageButton
				android:id="@+id/switch1_overflow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_action_navigation_more"
				android:background="@null"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:tag="1"/>
		</RelativeLayout>

		<com.androidplot.xy.XYPlot
			android:id="@+id/xyPlot_switch1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/graphTitle1"
			androidPlot.graphWidget.marginTop="@dimen/graphwidget_margin_top"
			androidPlot.graphWidget.marginLeft="@dimen/graphwidget_margin_left"
			androidPlot.graphWidget.marginBottom="@dimen/graphwidget_margin_bottom"
			androidPlot.graphWidget.marginRight="@dimen/graphwidget_margin_right"
			androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.legendWidget.visible="false" />

		<ProgressBar
			android:id="@+id/progressBar1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:layout_centerInParent="true" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/graphTitle2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView_switch2"
				style="@style/GraphTitle"
				android:layout_marginTop="15dp"
				android:text="@string/switch2"
				android:layout_centerVertical="true"/>

			<ImageButton
				android:id="@+id/switch2_overflow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_action_navigation_more"
				android:background="@null"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:tag="2"/>
		</RelativeLayout>

		<com.androidplot.xy.XYPlot
			android:id="@+id/xyPlot_switch2"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/graphTitle2"
			androidPlot.graphWidget.marginTop="@dimen/graphwidget_margin_top"
			androidPlot.graphWidget.marginLeft="@dimen/graphwidget_margin_left"
			androidPlot.graphWidget.marginBottom="@dimen/graphwidget_margin_bottom"
			androidPlot.graphWidget.marginRight="@dimen/graphwidget_margin_right"
			androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.legendWidget.visible="false" />

		<ProgressBar
			android:id="@+id/progressBar2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:layout_centerInParent="true" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/graphTitle3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView_switch3"
				style="@style/GraphTitle"
				android:layout_marginTop="15dp"
				android:text="@string/switch3"
				android:layout_centerVertical="true"/>

			<ImageButton
				android:id="@+id/switch3_overflow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_action_navigation_more"
				android:background="@null"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:tag="3"/>
		</RelativeLayout>

		<com.androidplot.xy.XYPlot
			android:id="@+id/xyPlot_switch3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/graphTitle3"
			androidPlot.graphWidget.marginTop="@dimen/graphwidget_margin_top"
			androidPlot.graphWidget.marginLeft="@dimen/graphwidget_margin_left"
			androidPlot.graphWidget.marginBottom="@dimen/graphwidget_margin_bottom"
			androidPlot.graphWidget.marginRight="@dimen/graphwidget_margin_right"
			androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.legendWidget.visible="false" />

		<ProgressBar
			android:id="@+id/progressBar3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:layout_centerInParent="true" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/graphTitle4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView_switch4"
				style="@style/GraphTitle"
				android:layout_marginTop="15dp"
				android:text="@string/switch4"
				android:layout_centerVertical="true"/>

			<ImageButton
				android:id="@+id/switch4_overflow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_action_navigation_more"
				android:background="@null"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:tag="4"/>
		</RelativeLayout>

		<com.androidplot.xy.XYPlot
			android:id="@+id/xyPlot_switch4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/graphTitle4"
			androidPlot.graphWidget.marginTop="@dimen/graphwidget_margin_top"
			androidPlot.graphWidget.marginLeft="@dimen/graphwidget_margin_left"
			androidPlot.graphWidget.marginBottom="@dimen/graphwidget_margin_bottom"
			androidPlot.graphWidget.marginRight="@dimen/graphwidget_margin_right"
			androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.rangeOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.graphWidget.domainOriginTickLabelPaint.textSize="@dimen/graph_labels_font_size"
			androidPlot.legendWidget.visible="false" />

		<ProgressBar
			android:id="@+id/progressBar4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:layout_centerInParent="true" />
	</RelativeLayout>
	
</LinearLayout>
